* Adjusted the 'caltoday' CSS to make it a color that doesn't render the text unreadable.  Also fixed a stylesheet bug that put today's date number in the middle of the box instead of on top.

--- a/webcit/static/webcit.css
+++ b/webcit/static/webcit.css
@@ -457,7 +457,7 @@ var sub {
 }
 
 .caltoday {
-	background-color: #4040FF;
+	background-color: #EEEEFF;
 }
 
 .current_sort_mode {
@@ -1401,7 +1401,7 @@ td.events_of_the_day {
 	margin: 4px;
 }
 
-.calday, .calout, .calweekend {
+.calday, .calout, .calweekend, .caltoday {
 	width: 14%;
 	height: 60px;
 	text-align: left;
